[gd_scene load_steps=3 format=3 uid="uid://character_display_scene"]

[ext_resource type="Script" path="res://character_display.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_BlockGlow"]
bg_color = Color(0.2, 0.4, 0.8, 0.15)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.7, 1, 0.8)
shadow_color = Color(0.3, 0.6, 1, 0.5)
shadow_size = 5
shadow_offset = Vector2(0, 0)

[node name="CharacterDisplay" type="VBoxContainer"]
custom_minimum_size = Vector2(140, 120)
script = ExtResource("1")

[node name="NameLabel" type="Label" parent="."]
layout_mode = 2
text = "Character"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(1, 1, 1, 1)

[node name="SpriteContainer" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 3

[node name="Sprite" type="AnimatedSprite2D" parent="SpriteContainer"]

[node name="HealthBarContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="BlockGlow" type="Panel" parent="HealthBarContainer"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_BlockGlow")

[node name="HealthBar" type="ProgressBar" parent="HealthBarContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false

[node name="HealthLabel" type="RichTextLabel" parent="HealthBarContainer/HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "20/20 HP"
fit_content = true
scroll_active = false
theme_override_font_sizes/normal_font_size = 11
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2

[node name="BlockLabel" type="Label" parent="."]
visible = false
layout_mode = 2
text = "ðŸ›¡ 5"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.5, 0.8, 1, 1)
